fixed ui overflow on login page

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,4 @@ body {
   position: relative;
   margin: 0px;
   height: 100%;
-  overflow: auto;
 }
