--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -2,9 +2,9 @@
   display:flex;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
-  overflow: auto;
+  overflow-x: hidden;
   position: relative;;
 }
 .circle1 {
